# Block_Chain

./: .gitignore  Cargo.toml  README.md
data/: db  snap.00000000000002E5  snap.0000000000000309  snap.0000000000000995  snap.0000000000000B96  snap.00000000000016DE
data1/: db
examples/: gen_bc.rs  gen_trx.rs
readme/: 1.md  2.md  3.md  4.md  5.md  6.md  7.md  7_ether.md
src/: block.rs  blockchain.rs  lib.rs  main.rs  proof_of_work.rs  server.rs
src/block/: block.rs  blockchain.rs  blockchains.rs  mod.rs
src/blocks/: block.rs  blockchain.rs  mod.rs  pow.rs
src/networks/: behaviour.rs  command.rs  node.rs
src/storage/: mod.rs  sleddb.rs
src/transactions/: transaction.rs  tx_input.rs  tx_output.rs  utxo_set.rs
src/utils/: mod.rs  secret.rs  serialize.rs  serializer.rs
src/wallets/: mod.rs  wallet.rs  wallets.rs
