[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = { version = "1.0.145", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.2"
thiserror = "1"
bincode = "1.3.3"
rust-crypto = "0.2.36"
chrono = "0.4.19"