[package]
name = "bit_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ring = "0.17.8"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
hex = "0.4.3"
sha2 = "0.10.8"
num-bigint = "0.4.6"